# OpenTitus

./: .gitignore  CMakeLists.txt  COMPILING  COMPILING_dingux  COMPILING_linux  COMPILING_win32  Changelog.txt  Makefile_dingux  Makefile_linux  Makefile_win32  README  README.md  opentitus.c  opentitus.cpp
builds/: README
builds/Linux/: opentitus
dev_status/: feature_requests.txt
docs/: bugfix.txt  original_bugs.txt  roadmap.txt
game/: README  titus.conf  titus_moktar.conf
include/: audio.h  backbuffer.h  common.h  config.h  dingoo.h  draw.h  elevators.h  enemies.h  engine.h  fonts.h  gates.h  globals.h  level.h  objects.h  original.h  player.h  reset.h  scroll.h  settings.h  sprites.h  tile_animation.h  tituserror.h
opl/: CMakeLists.txt  dbopl.c  opl.c  opl.cpp  opl_linux.c  opl_obsd.c  opl_queue.cpp  opl_readme.txt  opl_sdl.c  opl_sdl.cpp  opl_win32.c
src/: audio.c  audio.cpp  audio.h  backbuffer.c  backbuffer.h  common.c  common.cpp  common.h  config.h  dbopl.h  definitions.h  draw.c  draw.cpp  draw.h  elevators.c  elevators.h  enemies.c  enemies.cpp  enemies.h  engine.c  engine.cpp  engine.h  fonts.c  fonts.cpp  fonts.h  gates.c  gates.cpp  gates.h  globals.c  globals.cpp  globals.h  keyboard.c  keyboard.cpp  keyboard.h  level.c  level.cpp  level.h  malloc.h  menu.c  menu.cpp  (+34 more)
